// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HvCheckBoxGroup sample snapshot testing ErrorMessage 1`] = `
<div>
  <div
    class="HvCheckBoxGroup-root-104 HvFormElement-root-112"
  >
    <label
      class="HvCheckBoxGroup-label-105 HvLabel-root-113 HvTypography-root-116 HvTypography-highlightText-128"
      id="hvcheckboxgroup17-label"
    >
      Choose
    </label>
    <div
      aria-errormessage="hvcheckboxgroup17-error"
      aria-invalid="true"
      aria-labelledby="hvcheckboxgroup17-label"
      class="HvCheckBoxGroup-group-106 HvCheckBoxGroup-vertical-107 HvCheckBoxGroup-invalid-109"
      role="group"
    >
      <div
        class="HvCheckBox-root-138 HvFormElement-root-112"
      >
        <div
          class="HvCheckBox-container-139"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-142 HvBaseCheckbox-root-146 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox19-input"
              type="checkbox"
              value="1"
            />
            <div
              class="HvIconBase-root-149 HvIconBase-s-151"
              font-size="medium"
              name="Checkbox"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-144 HvLabel-root-113 HvTypography-root-116 HvTypography-highlightText-128"
            for="hvcheckbox19-input"
            id="hvcheckbox19-label"
          >
            Checkbox 1
          </label>
        </div>
      </div>
      <div
        class="HvCheckBox-root-138 HvFormElement-root-112"
      >
        <div
          class="HvCheckBox-container-139"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root Mui-checked HvCheckBox-checkbox-142 HvBaseCheckbox-root-146 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox21-input"
              type="checkbox"
              value="2"
            />
            <div
              class="HvIconBase-root-149 HvIconBase-s-151"
              font-size="medium"
              name="CheckboxCheck"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#414141"
                />
                <path
                  class="color0"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
                <path
                  class="color1"
                  d="M6.049 12.463L2.293 8.707l1.414-1.414 2.244 2.244 6.3-7.2 1.506 1.317z"
                  fill="#FBFCFC"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-144 HvLabel-root-113 HvTypography-root-116 HvTypography-highlightText-128"
            for="hvcheckbox21-input"
            id="hvcheckbox21-label"
          >
            Checkbox 2
          </label>
        </div>
      </div>
      <div
        class="HvCheckBox-root-138 HvFormElement-root-112"
      >
        <div
          class="HvCheckBox-container-139"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-142 HvBaseCheckbox-root-146 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox23-input"
              type="checkbox"
              value="3"
            />
            <div
              class="HvIconBase-root-149 HvIconBase-s-151"
              font-size="medium"
              name="Checkbox"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-144 HvLabel-root-113 HvTypography-root-116 HvTypography-highlightText-128"
            for="hvcheckbox23-input"
            id="hvcheckbox23-label"
          >
            Checkbox 3
          </label>
        </div>
      </div>
    </div>
    <div
      class="HvCheckBoxGroup-error-111 HvWarningText-root-154 HvWarningText-show-159"
    >
      <div
        class="HvWarningText-defaultIcon-158 HvIconBase-root-149 HvIconBase-s-151"
        name="Fail"
      >
        <svg
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M7.5 4.001h1v6h-1zm0 8h1v-1h-1zM16 8a8 8 0 10-8 8 8 8 0 008-8zm-1 0a7 7 0 11-7-7 7 7 0 017 7z"
            fill="#C62828"
          />
        </svg>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        aria-relevant="additions text"
        class="HvWarningText-warningText-157 HvWarningText-topGutter-156 HvTypography-root-116 HvTypography-normalText-129"
        id="hvcheckboxgroup17-error"
      >
        No way for this to be valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`HvCheckBoxGroup sample snapshot testing Horizontal 1`] = `
<div>
  <div
    class="HvCheckBoxGroup-root-51 HvFormElement-root-59"
  >
    <label
      class="HvCheckBoxGroup-label-52 HvLabel-root-60 HvTypography-root-63 HvTypography-highlightText-75"
      id="hvcheckboxgroup9-label"
    >
      Choose your favorite checkboxes
    </label>
    <label
      class="HvInfoMessage-root-85 HvInfoMessage-gutter-87 HvTypography-root-63 HvTypography-normalText-76"
      id="hvcheckboxgroup9-description"
    >
      Horizontally, this time
    </label>
    <div
      aria-describedby="hvcheckboxgroup9-description"
      aria-labelledby="hvcheckboxgroup9-label"
      class="HvCheckBoxGroup-group-53 HvCheckBoxGroup-horizontal-55"
      role="group"
    >
      <div
        class="HvCheckBox-root-88 HvFormElement-root-59"
      >
        <div
          class="HvCheckBox-container-89"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-92 HvBaseCheckbox-root-96 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox11-input"
              type="checkbox"
              value="1"
            />
            <div
              class="HvIconBase-root-99 HvIconBase-s-101"
              font-size="medium"
              name="Checkbox"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-94 HvLabel-root-60 HvTypography-root-63 HvTypography-highlightText-75"
            for="hvcheckbox11-input"
            id="hvcheckbox11-label"
          >
            Checkbox 1
          </label>
        </div>
      </div>
      <div
        class="HvCheckBox-root-88 HvFormElement-root-59"
      >
        <div
          class="HvCheckBox-container-89"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root Mui-checked HvCheckBox-checkbox-92 HvBaseCheckbox-root-96 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox13-input"
              type="checkbox"
              value="2"
            />
            <div
              class="HvIconBase-root-99 HvIconBase-s-101"
              font-size="medium"
              name="CheckboxCheck"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#414141"
                />
                <path
                  class="color0"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
                <path
                  class="color1"
                  d="M6.049 12.463L2.293 8.707l1.414-1.414 2.244 2.244 6.3-7.2 1.506 1.317z"
                  fill="#FBFCFC"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-94 HvLabel-root-60 HvTypography-root-63 HvTypography-highlightText-75"
            for="hvcheckbox13-input"
            id="hvcheckbox13-label"
          >
            Checkbox 2
          </label>
        </div>
      </div>
      <div
        class="HvCheckBox-root-88 HvFormElement-root-59"
      >
        <div
          class="HvCheckBox-container-89"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-92 HvBaseCheckbox-root-96 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox15-input"
              type="checkbox"
              value="3"
            />
            <div
              class="HvIconBase-root-99 HvIconBase-s-101"
              font-size="medium"
              name="Checkbox"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-94 HvLabel-root-60 HvTypography-root-63 HvTypography-highlightText-75"
            for="hvcheckbox15-input"
            id="hvcheckbox15-label"
          >
            Checkbox 3
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HvCheckBoxGroup sample snapshot testing Main (Vertical) 1`] = `
<div>
  <div
    class="HvCheckBoxGroup-root-1 HvFormElement-root-9"
    id="main"
  >
    <label
      class="HvCheckBoxGroup-label-2 HvLabel-root-10 HvTypography-root-13 HvTypography-highlightText-25"
      id="main-label"
    >
      Choose your favorite checkboxes
    </label>
    <div
      aria-labelledby="main-label"
      class="HvCheckBoxGroup-group-3 HvCheckBoxGroup-vertical-4"
      role="group"
    >
      <div
        class="HvCheckBoxGroup-selectAll-7 HvCheckBox-root-35 HvFormElement-root-9"
      >
        <div
          class="HvCheckBox-container-36"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-39 HvBaseCheckbox-root-43 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="true"
              id="hvcheckbox1-input"
              type="checkbox"
              value="on"
            />
            <div
              class="HvIconBase-root-46 HvIconBase-s-48"
              font-size="medium"
              name="CheckboxPartial"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1zm3-6h8V7H4z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-41 HvLabel-root-10 HvTypography-root-13 HvTypography-highlightText-25"
            for="hvcheckbox1-input"
            id="hvcheckbox1-label"
          >
            <b>
              1
            </b>
             / 3
          </label>
        </div>
      </div>
      <div
        class="HvCheckBox-root-35 HvFormElement-root-9"
      >
        <div
          class="HvCheckBox-container-36"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-39 HvBaseCheckbox-root-43 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox3-input"
              name="favorite"
              type="checkbox"
              value="1"
            />
            <div
              class="HvIconBase-root-46 HvIconBase-s-48"
              font-size="medium"
              name="Checkbox"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-41 HvLabel-root-10 HvTypography-root-13 HvTypography-highlightText-25"
            for="hvcheckbox3-input"
            id="hvcheckbox3-label"
          >
            Checkbox 1
          </label>
        </div>
      </div>
      <div
        class="HvCheckBox-root-35 HvFormElement-root-9"
      >
        <div
          class="HvCheckBox-container-36"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root Mui-checked HvCheckBox-checkbox-39 HvBaseCheckbox-root-43 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox5-input"
              name="favorite"
              type="checkbox"
              value="2"
            />
            <div
              class="HvIconBase-root-46 HvIconBase-s-48"
              font-size="medium"
              name="CheckboxCheck"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#414141"
                />
                <path
                  class="color0"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
                <path
                  class="color1"
                  d="M6.049 12.463L2.293 8.707l1.414-1.414 2.244 2.244 6.3-7.2 1.506 1.317z"
                  fill="#FBFCFC"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-41 HvLabel-root-10 HvTypography-root-13 HvTypography-highlightText-25"
            for="hvcheckbox5-input"
            id="hvcheckbox5-label"
          >
            Checkbox 2
          </label>
        </div>
      </div>
      <div
        class="HvCheckBox-root-35 HvFormElement-root-9"
      >
        <div
          class="HvCheckBox-container-36"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-39 HvBaseCheckbox-root-43 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              id="hvcheckbox7-input"
              name="favorite"
              type="checkbox"
              value="3"
            />
            <div
              class="HvIconBase-root-46 HvIconBase-s-48"
              font-size="medium"
              name="Checkbox"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 0h16v16H0z"
                  fill="#FBFCFC"
                />
                <path
                  class="color1"
                  d="M16 16H0V0h16zM1 15h14V1H1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
          <label
            class="HvCheckBox-label-41 HvLabel-root-10 HvTypography-root-13 HvTypography-highlightText-25"
            for="hvcheckbox7-input"
            id="hvcheckbox7-label"
          >
            Checkbox 3
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
